added snipped code1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="" />
     <meta name="author" content="Rezaul Karim Arif" />
     <meta property="og:image" content="/og-image-update.png" />
+    <link rel="icon" href="/photos/logo.png" type="image/png">
+
     <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -18,12 +20,12 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '{your-pixel-id-goes-here}');
+  fbq('init', '{30113006891681050}');
   fbq('track', 'PageView');
 </script>
 <noscript>
   <img height="1" width="1" style="display:none" 
-       src="https://www.facebook.com/tr?id={your-pixel-id-goes-here}&ev=PageView&noscript=1"/>
+       src="https://www.facebook.com/tr?id={30113006891681050}&ev=PageView&noscript=1"/>
 </noscript>
 <!-- End Facebook Pixel Code -->
   </head>
