--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
   fbq('init', '{30113006891681050}');
   fbq('track', 'PageView');
 </script>
-<noscript>
-  <img height="1" width="1" style="display:none" 
-       src="https://www.facebook.com/tr?id={30113006891681050}&ev=PageView&noscript=1"/>
-</noscript>
+
 <!-- End Facebook Pixel Code -->
   </head>
 
@@ -34,6 +31,9 @@
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script><noscript>
+  <img height="1" width="1" style="display:none" 
+       src="https://www.facebook.com/tr?id={30113006891681050}&ev=PageView&noscript=1"/>
+</noscript>
   </body>
 </html>
