added snipped code1

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,29 +10,36 @@
     <link rel="icon" href="/photos/logo.png" type="image/png">
 
     <!-- Facebook Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '{30113006891681050}');
-  fbq('track', 'PageView');
-</script>
-
-<!-- End Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '30113006891681050'); 
+      fbq('track', 'PageView');
+    </script>
+    <!-- End Facebook Pixel Code -->
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+
+    <!-- Example WhatsApp Tracking -->
+    <a href="https://wa.me/96176534652" onclick="fbq('track', 'Contact')">
+      Order on WhatsApp
+    </a>
+
+    <!-- Scripts -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script><noscript>
-  <img height="1" width="1" style="display:none" 
-       src="https://www.facebook.com/tr?id={30113006891681050}&ev=PageView&noscript=1"/>
-</noscript>
+    <script type="module" src="/src/main.tsx"></script>
+
+    <noscript>
+      <img height="1" width="1" style="display:none" 
+        src="https://www.facebook.com/tr?id=30113006891681050&ev=PageView&noscript=1"/>
+    </noscript>
   </body>
 </html>
