added snipped code1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Rezaul Karim Arif" />
     <meta property="og:image" content="/og-image-update.png" />
     <link rel="icon" href="/photos/logo.png" type="image/png">
+    <meta name="facebook-domain-verification" content="78h2yb5fcr0bnznfckfeufyazvp0oj" />
 
     <!-- Facebook Pixel Code -->
     <script>
